--- a/Gabay-Final-V2/Views/DashBoard/Student_Homepage/Student_Master.Master
+++ b/Gabay-Final-V2/Views/DashBoard/Student_Homepage/Student_Master.Master
@@ -61,6 +61,19 @@
         .hidden {
             display: none;
         }
+
+        .modal-dialog.modal-dialog-right {
+            right: 0;
+            margin-right: 3%;
+            top: 6%;
+        }
+        .custom-button {
+            background-color: grey;
+            color: white; 
+            width: 200px; 
+            margin: 0 auto; 
+            display: block; 
+        }
     </style>
     <form id="studentMaster" class="studentMaster" runat="server" autocomplete="off">
         <%--TOP NAV--%>
@@ -216,15 +229,15 @@
         </div>
 
 
-        <!-- Add this modal markup at the end of the body tag -->
+
         <div class="modal fade" id="notificationModal" tabindex="-1" role="dialog" aria-labelledby="notificationModalLabel" aria-hidden="true">
-            <div class="modal-dialog" role="document">
+            <div class="modal-dialog modal-dialog-right" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
                         <h5 class="modal-title" id="notificationModalLabel">Notification Details</h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                       <%-- <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
-                        </button>
+                        </button>--%>
                     </div>
                     <div class="modal-body">
                         <!-- wlay  notify -->
@@ -243,12 +256,13 @@
                     </div>
                     <div class="modal-footer">
                         <!-- Add or modify buttons here as needed -->
-                        <asp:Button ID="btnMarkAsRead" runat="server" Text="Clear" CssClass="btn btn-primary" OnClientClick="hideBadge(); return true;" OnClick="BtnMarkAsRead_Click" />
+                        <asp:Button ID="btnMarkAsRead" runat="server" Text="Mark as Read" CssClass="custom-button" OnClientClick="hideBadge(); return true;" OnClick="BtnMarkAsRead_Click" />
                         <%-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>--%>
                     </div>
                 </div>
             </div>
         </div>
+
 
 
 
