--- a/Gabay-Final-V2/Views/DashBoard/Department_Homepage/Department_Master.Master
+++ b/Gabay-Final-V2/Views/DashBoard/Department_Homepage/Department_Master.Master
@@ -67,17 +67,16 @@
             margin-right: 3% !important;
             top: 6% !important;
         }
-
         .custom-button {
             background-color: grey;
-            color: white;
-            width: 200px;
-            margin: 0 auto;
-            display: block;
+            color: white; 
+            width: 200px; 
+            margin: 0 auto; 
+            display: block; 
         }
     </style>
     <form id="departmentMaster" class="departmentMaster" runat="server">
-        <%--TOP NAV--%>
+         <%--TOP NAV--%>
         <header class="shadow sticky-top">
             <nav class="navbar navbar-expand-lg bg-body-tertiary z-1">
                 <div class="container-fluid  bg-white">
@@ -108,7 +107,7 @@
                                   <span class="mt-2">Way Finding</span>
                                 </asp:HyperLink>
                             </li>
-                            <%-- <li class="nav-item p-1">
+                           <%-- <li class="nav-item p-1">
                                 <asp:HyperLink ID="chatbot" runat="server" CssClass="topnav-item text-center custom-text-color" NavigateUrl="~/Views/Modules/Chatbot/Department_Chatbot.aspx?=">
                                   <i class="bi bi-chat-left-dots-fill me-2"></i>
                                   <span class="mt-2">Chatbot</span>
@@ -193,7 +192,7 @@
                             <p class="mt-4">Way Finding</p>
                         </asp:HyperLink>
                     </li>
-                    <%-- <li class="nav-item ">
+                   <%-- <li class="nav-item ">
                         <asp:HyperLink ID="sideNavCB" runat="server" CssClass="navLinks text-center" NavigateUrl="~/Views/Modules/Chatbot/Department_Chatbot.aspx?=">
                             <i class="bi bi-chat-left-dots-fill fs-4 me-3"></i>
                             <p class="mt-4">Chatbot</p>
@@ -205,13 +204,13 @@
                             <p class="mt-4">Campus Information</p>
                         </asp:HyperLink>
                     </li>--%>
-                    <li class="nav-item ">
+                     <li class="nav-item ">
                         <asp:HyperLink ID="sideManageAppnt" runat="server" CssClass="navLinks text-center" NavigateUrl="~/Views/Modules/Appointment/Manage_Appointment.aspx?=">
                             <i class="bi bi-calendar3-event-fill fs-4 me-3"></i>
                             <p class="mt-4">Manage Appointment</p>
                         </asp:HyperLink>
                     </li>
-                    <%-- <li class="nav-item ">
+                   <%-- <li class="nav-item ">
                         <asp:HyperLink ID="sideNavCC" runat="server" CssClass="navLinks text-center">
                             <i class="bi bi-calendar2-month-fill fs-4 me-3"></i>
                             <p class="mt-4">Academic Calendar</p>
@@ -247,7 +246,7 @@
                                     <Columns>
                                         <%--    <asp:BoundField DataField="ID_appointment" HeaderText="Appointment ID" SortExpression="ID_appointment" ItemStyle-CssClass="center-align" />--%>
                                         <asp:BoundField DataField="full_name" HeaderText="Name" SortExpression="full_name" ItemStyle-CssClass="center-align" />
-                                       <asp:BoundField DataField="appointment_date" HeaderText="Date" SortExpression="appointment_date" ItemStyle-CssClass="center-align" DataFormatString="{0:d}" />
+                                        <asp:BoundField DataField="appointment_date" HeaderText="Date" SortExpression="appointment_date" ItemStyle-CssClass="center-align" DataFormatString="{0:d}" />
                                         <asp:BoundField DataField="appointment_status" HeaderText="Status" SortExpression="appointment_status" ItemStyle-CssClass="center-align" />
                                     </Columns>
                                 </asp:GridView>
@@ -255,61 +254,60 @@
                         </div>
                     </div>
                     <div class="modal-footer">
-                        <asp:Button ID="btnMarkAsRead" runat="server" Text="Read" CssClass="custom-button" OnClientClick="hideBadge(); return true;" OnClick="btnMarkAsRead_Click" />
-                       <%-- <asp:LinkButton ID="btnMarkAsRead" runat="server" CssClass="custom-button" OnClientClick="hideBadge(); return true;" OnClick="btnMarkAsRead_Click" PostBackUrl="~/Views/Modules/Appointment/Manage_Appointment.aspx">Read</asp:LinkButton>--%>
-                        <%-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>--%>
+                        <%--<asp:Button ID="btnMarkAsRead" runat="server" Text="Read" CssClass="btn btn-primary" OnClientClick="hideBadge(); return true;" OnClick="btnMarkAsRead_Click" />--%>
+                        <asp:LinkButton ID="btnMarkAsRead" runat="server" CssClass="custom-button" OnClientClick="hideBadge(); return true;" OnClick="btnMarkAsRead_Click" PostBackUrl="~/Views/Modules/Appointment/Manage_Appointment.aspx">Read</asp:LinkButton>
+                       <%-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>--%>
                     </div>
                 </div>
             </div>
         </div>
     </form>
-     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script>
-        function GetUnreadNotifications() {
-            $.ajax({
-                type: "POST",
-                url: "Department_Master.Master/GetUnreadNotificationsDataTableFromDatabase",
-                contentType: "application/json; charset=utf-8",
-                dataType: "json",
-                success: function (result) {
-                    // Check if there are unread notifications
-                    if (result.d.Count > 0) {
-                        // Update the badge content with the count of unread notifications
-                        updateBadge(result.d.Count);
+     <script>
+         function GetUnreadNotifications() {
+             $.ajax({
+                 type: "POST",
+                 url: "Department_Master.Master/GetUnreadNotificationsDataTableFromDatabase",
+                 contentType: "application/json; charset=utf-8",
+                 dataType: "json",
+                 success: function (result) {
+                     // Check if there are unread notifications
+                     if (result.d.Count > 0) {
+                         // Update the badge content with the count of unread notifications
+                         updateBadge(result.d.Count);
 
-                        // Bind the data to the GridView
-                        notificationGridView.DataSource = result.d.Data;
-                        notificationGridView.DataBind();
+                         // Bind the data to the GridView
+                         notificationGridView.DataSource = result.d.Data;
+                         notificationGridView.DataBind();
 
-                        // Show the modal
-                        $('#notificationModal').modal('show');
-                    } else {
-                        // If count is 0, hide or style the badge accordingly
-                        hideBadge();
-                    }
-                },
-                error: function (xhr, ajaxOptions, thrownError) {
-                    console.error(thrownError);
-                }
-            });
-        }
+                         // Show the modal
+                         $('#notificationModal').modal('show');
+                     } else {
+                         // If count is 0, hide or style the badge accordingly
+                         hideBadge();
+                     }
+                 },
+                 error: function (xhr, ajaxOptions, thrownError) {
+                     console.error(thrownError);
+                 }
+             });
+         }
 
-        function hideBadge() {
-            // Get the label element representing the badge
-            var badgeLabel = document.getElementById('<%= lblNotificationCount.ClientID %>');
+         function hideBadge() {
+             // Get the label element representing the badge
+             var badgeLabel = document.getElementById('<%= lblNotificationCount.ClientID %>');
 
-            // Check if the badge label exists
-            if (badgeLabel) {
-                // Check if the count is zero
-                if (parseInt(badgeLabel.innerHTML) === 0) {
-                    // If count is zero, make the badge invisible
-                    badgeLabel.style.display = 'none';
-                } else {
-                    // If count is not zero, set background color to red
-                    badgeLabel.style.backgroundColor = 'red';
-                }
-            }
-        }
+             // Check if the badge label exists
+             if (badgeLabel) {
+                 // Check if the count is zero
+                 if (parseInt(badgeLabel.innerHTML) === 0) {
+                     // If count is zero, make the badge invisible
+                     badgeLabel.style.display = 'none';
+                 } else {
+                     // If count is not zero, set background color to red
+                     badgeLabel.style.backgroundColor = 'red';
+                 }
+             }
+         }
      </script>
 </body>
 </html>
