--- a/Gabay-Final-V2/Views/DashBoard/Admin_Homepage/Admin_Master.Master
+++ b/Gabay-Final-V2/Views/DashBoard/Admin_Homepage/Admin_Master.Master
@@ -20,7 +20,7 @@
     </asp:ContentPlaceHolder>
 </head>
 <body>
-    <style>
+   <style>
         .icon-button {
             position: relative;
             display: flex;
@@ -74,6 +74,7 @@
             width: 200px;
             margin: 0 auto;
             display: block;
+            text-align:center;
         }
     </style>
     <form id="adminMaster" class="adminMaster" runat="server">
@@ -281,7 +282,8 @@
                         </div>
                     </div>
                     <div class="modal-footer">
-                     <asp:Button ID="btnMarkAsRead" runat="server" Text="Mark as Read" CssClass="custom-button" OnClientClick="hideBadge(); return true;" OnClick="BtnMarkAsRead_Click" />
+                     <%--<asp:Button ID="btnMarkAsRead" runat="server" Text="Mark as Read" CssClass="custom-button" OnClientClick="hideBadge(); return true;" OnClick="BtnMarkAsRead_Click" />--%>
+                        <asp:LinkButton ID="btnMarkAsRead" runat="server" CssClass="custom-button" OnClientClick="hideBadge(); return true;" OnClick="BtnMarkAsRead_Click" PostBackUrl="~/Views/Modules/Admin_Modules/Manage_Users.aspx">Mark as Read</asp:LinkButton>
                     </div>
                 </div>
             </div>
@@ -291,7 +293,7 @@
         function GetUnreadNotifications() {
             $.ajax({
                 type: "POST",
-                url: "Admin_Master.Master/GetUnreadNotificationsDataTableFromDatabase", 
+                url: "Admin_Master.Master/GetUnreadNotificationsDataTableFromDatabase",
                 contentType: "application/json; charset=utf-8",
                 dataType: "json",
                 success: function (result) {
